# Linux-Autocomplete-Engine

./: CMakeLists.txt  MMapTrieLoader.cpp  MMapTrieLoader.h  README.md  RadixTrie.cpp  RadixTrie.h  autocomplete_daemon  build.sh  build_trie_blob  build_trie_blob.cpp  daemon  daemon_evdev  daemon_libinput  daemon_log.txt  main  xinput2_daemon.cpp
