cmake_minimum_required(VERSION 3.5)
project(autocomplete_engine)
set(CMAKE_CXX_STANDARD 17)
find_package (Threads REQUIRED)
find_package (X11 REQUIRED)
include_directories(${X11_INCLUDE_DIR})
add_library(radix STATIC RadixTrie.cpp MMapTrieLoader.cpp)
add_executable(daemon daemon_x11.cpp)
target_link_libraries(daemon radix ${X11_LIBRARIES} Xtst Threads::Threads)
